bin/compiler/BrCompiler.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 * GRAMÁTICA REFATORADA PARA LL(1) - Eliminação de LOOKAHEADs e Ambiguidades
 */
options
{
  static = true;
}

PARSER_BEGIN(BrCompiler)
package compiler;

import java.io.BufferedReader;
import java.io.InputStreamReader;
import java.io.StringReader;

public class BrCompiler
{
  
  private static boolean parserInitialized = false;

  private static String obterTokenPortugues(int tipoToken) {
    switch(tipoToken) {
      case INICIOPROG: return "gambiarra";
      case ABREBLOCO: return "abre-te-sesamo";
      case FECHABLOCO: return "fecha-te-sesamo";
      case INT: return "stonks";
      case FLOAT: return "fiado";
      case STRING: return "textao";
      case BOOL: return "eh-migue";
      case TRUE: return "sim";
      case FALSE: return "nao";
      case ATRIBUICAO: return "receba";
      case FIMESTRUTURA: return "br";
      case CONDICIONAL: return "sepa";
      case SENAO: return "da-teus-pulo";
      case ABRIREXP: return "[";
      case FECHAREXP: return "]";
      case ABRIRFUNC: return "(";
      case FECHARFUNC: return ")";
      case PRINT: return "printa";
      case SCAN: return "papa-entrada";
      case FOR: return "pet";
      case WHILE: return "repet";
      case FUNCAO: return "vai-filhao";
      case RETURN: return "devolva";
      case SEPARADOR: return ";";
      case SOMA: return "+";
      case SUBTRACAO: return "-";
      case MULTIPLICACAO: return "*";
      case DIVISAO: return "/";
      case OPMAIOR: return ">";
      case OPIGUAL: return "==";
      case OPMENOR: return "<";
      case OPMAIORIGUAL: return ">=";
      case OPMENORIGUAL: return "<="; 
      case OPDIF: return "!=";
      case OPAND: return "&&";
      case OPOR: return "|";
      case IDENTIFICADOR: return "identificador";
      case CONSTANTE_INT: return "numero inteiro";
      case CONSTANTE_FLOAT: return "numero decimal";
      case LITERAL_STRING: return "texto";
      case VIRGULA: return "virgula (,)";
      case LISTA: return "tropa-do-gordao";
      case ADICIONAR: return "recrutar";
      case REMOVER: return "expulsar";
      case TAMANHO: return "tamanho";
      case PILHA: return "sanduiche-iche";
      case EMPILHAR: return "montar-sanduba";
      case DESEMPILHAR: return "comer-sanduba";
      case TOPO: return "olho-gordo";
      case PILHA_VAZIA: return "farelo";
      default: return "token desconhecido";
    }
  }

  public static String handleParseError(ParseException e) {
    StringBuilder resultado = new StringBuilder();
    boolean blocoNaoFechado = false;
    
    if (e.currentToken != null) {
        if (e.currentToken.kind == EOF) {
            blocoNaoFechado = true;
        } else if (e.currentToken.next != null && e.currentToken.next.kind == EOF) {
            blocoNaoFechado = true;
        } else if (e.expectedTokenSequences != null) {
            for (int[] sequence : e.expectedTokenSequences) {
                for (int tokenType : sequence) {
                    if (tokenType == FECHABLOCO) {
                        blocoNaoFechado = true;
                        break;
                    }
                }
                if (blocoNaoFechado) break;
            }
        }
    }
    
    if (blocoNaoFechado) {
        resultado.append("ERRO DE SINTAXE: Bloco nao fechado\n");
        resultado.append("Faltou adicionar 'fecha-te-sesamo' para fechar bloco de comando");
        
        if (e.currentToken != null) {
            resultado.append("\nErro detectado proximo a linha ").append(e.currentToken.beginLine)
                    .append(", coluna ").append(e.currentToken.beginColumn);
        }
        return resultado.toString();
    }
    
    resultado.append("ERRO DE SINTAXE:\n");

    // Usa apenas currentToken para uma unica posicao correta
    if (e.currentToken != null && e.currentToken.image != null) {
        resultado.append("Token encontrado: '").append(e.currentToken.image).append("' na linha ")
                .append(e.currentToken.beginLine).append(", coluna ").append(e.currentToken.beginColumn);
    } else {
        resultado.append("Token encontrado: fim de arquivo inesperado");
    }
    
    if (e.expectedTokenSequences.length > 0) {
        resultado.append("\nEra esperado: ");
        boolean first = true;
        for (int[] sequence : e.expectedTokenSequences) {
            if (!first) resultado.append(" ou ");
            for (int i = 0; i < sequence.length; i++) {
                if (i > 0) resultado.append(" ");
                resultado.append("'").append(obterTokenPortugues(sequence[i])).append("'");
            }
            first = false;
        }
    }
    
    return resultado.toString();
  }

  public static String handleTokenMgrError(TokenMgrError e) {
    String msg = e.getMessage();
    StringBuilder resultado = new StringBuilder();
    
    int linha = 1;
    int coluna = 1;
    String charEncontrado = "?";

    try {
        String[] partes = msg.split(" ");
        for (int i = 0; i < partes.length; i++) {
            if (partes[i].equals("line") && i + 1 < partes.length) {
                linha = Integer.parseInt(partes[i + 1].replace(",", ""));
            }
            if (partes[i].equals("column") && i + 1 < partes.length) {
                coluna = Integer.parseInt(partes[i + 1].replace(".", ""));
            }
        }
        
        if (msg.contains("after prefix")) {
            int start = msg.indexOf("after prefix \"") + 14;
            int end = msg.indexOf("\"", start);
            if (start > 13 && end > start) {
                String prefixo = msg.substring(start, end);
                charEncontrado = prefixo;
                coluna = Math.max(1, coluna - prefixo.length());
            }
        } else if (msg.contains("Encountered:") && msg.contains("(")) {
            int parenteseAbre = msg.lastIndexOf("(");
            int parenteseFecha = msg.indexOf(")", parenteseAbre);
            
            if (parenteseAbre != -1 && parenteseFecha != -1) {
                String codigoStr = msg.substring(parenteseAbre + 1, parenteseFecha).trim();
                
                if (codigoStr.matches("\\d+")) {
                    try {
                        int codigoAscii = Integer.parseInt(codigoStr);
                        charEncontrado = Character.toString((char) codigoAscii);
                    } catch (NumberFormatException ex) {
                        charEncontrado = codigoStr;
                    }
                } else {
                    charEncontrado = codigoStr;
                }
            }
        } else {
            int aspasAbre = msg.indexOf("'");
            int aspasFecha = msg.indexOf("'", aspasAbre + 1);
            if (aspasAbre != -1 && aspasFecha != -1) {
                charEncontrado = msg.substring(aspasAbre + 1, aspasFecha);
            }
        }
    } catch (Exception ex) {
        // manter valores padrao
    }
    
    if (charEncontrado.startsWith("'") && charEncontrado.endsWith("'") && charEncontrado.length() > 1) {
        charEncontrado = charEncontrado.substring(1, charEncontrado.length() - 1);
    }

    resultado.append("ERRO LEXICO\n");
    resultado.append("Caractere invalido '").append(charEncontrado).append("' encontrado na linha ")
            .append(linha).append(", coluna ").append(coluna);

    String sugestao = gerarSugestaoErroLexico(charEncontrado);
    resultado.append("\n").append(sugestao);
    
    return resultado.toString();
  }

  private static String gerarSugestaoErroLexico(String charEncontrado) {
    if (charEncontrado.equals("=")) {
        return "Sugestao: Use 'receba' para atribuicao em vez de '='";
    } else if (charEncontrado.equals("@")) {
        return "Sugestao: Caractere '@' nao e permitido";
    } else if (charEncontrado.equals("?")) {
        return "Sugestao: Ponto de interrogacao nao e um operador valido";
    } else if (charEncontrado.equals(":")) {
        return "Sugestao: Dois pontos nao sao usados na linguagem";
    } else if (charEncontrado.equals("'")) {
        return "Sugestao: Utilize aspas duplas para strings";
    } else if (charEncontrado.equals("!")) {
        return "Sugestao: Use '!=' para diferenca";
    } else {
        return "Sugestao: Use apenas letras, numeros e os operadores definidos";
    }
  }
  
  public static void main(String args[]) throws ParseException {
    if (!parserInitialized) {
        new BrCompiler(System.in);
        parserInitialized = true;
    }

    BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));
    
    while (true) {
        System.out.println("na minha maquina funciona!");
        System.out.print("comece a digitar sua gambiarra:");

        try {
            String line = reader.readLine();
            
            if (line == null) {
                System.out.println("\nSaindo...");
                break;
            }
            
            line = line.trim();
            
            if (line.isEmpty()) {
                continue;
            }
            
            BrCompiler.ReInit(new StringReader(line));
            BrCompiler.main();
            System.out.println("OK.");
            
        } catch (ParseException e) {
            System.out.println("NOK.");
            System.out.println(handleParseError(e));
        } catch (TokenMgrError e) {
            System.out.println("NOK.");
            System.out.println(handleTokenMgrError(e));
        } catch (Exception e) {
            System.out.println("NOK.");
            System.out.println("ERRO INESPERADO: " + e.getMessage());
            
            if (e.toString().contains("Stream closed") || e.toString().contains("null")) {
                System.out.println("Saindo...");
                break;
            }
        }
    }
  }

}

PARSER_END(BrCompiler)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"

}

TOKEN : /*funcoes */
{
  <PRINT: "printa" >|
  <SCAN: "papa-entrada" >|
  <FOR: "pet" >|
  <WHILE: "repet" >|
  <SEPARADOR: ";" >|
  <FUNCAO: "vai-filhao" >|
  <RETURN: "devolva">|
  <VIRGULA: ",">
  
}

TOKEN : /*estrururas de dados*/
{
  <LISTA: "tropa-do-gordao" >| 
  <ADICIONAR: "recrutar" >  |
  <REMOVER: "expulsar" >  |  
  <TAMANHO: "tamanho" >|
  <PILHA: "sanduiche-iche" >    |
  <EMPILHAR: "montar-sanduba">|
  <DESEMPILHAR: "comer-sanduba">  |
  <TOPO: "olho-gordo">|
  <PILHA_VAZIA: "farelo">
}

TOKEN : /*estruturas*/
{
  <INICIOPROG: "gambiarra">|
  <ABREBLOCO: "abre-te-sesamo">|
  <FECHABLOCO: "fecha-te-sesamo">|
  <INT: "stonks">|
  <FLOAT: "fiado">|
  <STRING: "textao">|
  <BOOL: "eh-migue">|
  <TRUE: "sim">|
  <FALSE: "nao">|
  <ATRIBUICAO: "receba">|
  <FIMESTRUTURA: "br">|
  <CONDICIONAL: "sepa">|
  <SENAO: "da-teus-pulo">|
  <ABRIREXP: "[">|
  <FECHAREXP: "]">|
  <ABRIRFUNC: "(">|
  <FECHARFUNC: ")">|
  <LITERAL_STRING:"\"" (~["\""])* "\"">|
  <CONSTANTE_INT: (<DIGITO>)+>|
  <CONSTANTE_FLOAT: (<DIGITO>)+ "." (<DIGITO>)+>|
  <IDENTIFICADOR: ["a"-"z", "A"-"Z"] (["a"-"z", "A"-"Z"] | "-" | "_"| <DIGITO>)*>|
  <#DIGITO : [ "0"-"9" ]> 
}

TOKEN: /*operacoes*/
{
 <SOMA : "+">|
 <SUBTRACAO : "-">|
 <MULTIPLICACAO : "*">|
 <DIVISAO : "/">|
 <OPMAIOR: ">">|
 <OPIGUAL: "==">|
 <OPMENOR: "<">|
 <OPDIF: "!=">|
 <OPMAIORIGUAL: " >=" >|
 <OPMENORIGUAL: "<=" >|
 <OPAND: "&&" >|
 <OPOR: "|" >
}

void main() :
{}
{
  <INICIOPROG> <ABREBLOCO> bloco() <FECHABLOCO> 
}

void bloco():
{}
{
 (comando() | declaraFuncao())*
}

void comando():
{ }
{
   declaraVariavel() |
   expressaoCondicional()       |
   comandoIdentificador()       |
   print()|
   scan()|
   whileLoop()|
   forLoop()|
   retorno()
}

void comandoIdentificador():
{}
{
  <IDENTIFICADOR> comandoIdentificadorSufixo()
}

void comandoIdentificadorSufixo():
{}
{
  <ATRIBUICAO> Expressao() <FIMESTRUTURA>                                    |
  <ABRIRFUNC> (ListaExpressoes())? <FECHARFUNC> <FIMESTRUTURA>               |
  <ADICIONAR> Expressao() <FIMESTRUTURA>                                     |
  <REMOVER> <ABRIREXP> Expressao() <FECHAREXP> <FIMESTRUTURA>                |
  <EMPILHAR> Expressao() <FIMESTRUTURA>                                      |
  <DESEMPILHAR> <FIMESTRUTURA>                                               |
  (<ABRIREXP> (ListaExpressoes())? <FECHAREXP>)? sufixoExpressao()
}

void sufixoExpressao():
{}
{
  ((<SOMA> | <SUBTRACAO>) fator())* <FIMESTRUTURA>
}

void declaraVariavel():
{ }
{
tipoDado()
ListaIdentificadores()
(
  <ATRIBUICAO> ListaExpressoes()
)?
<FIMESTRUTURA>
}

void tipoDado():
{ }
{
  (<INT> | <FLOAT>| <STRING> | <BOOL> | tipoLista() | tipoPilha())

}

void ListaIdentificadores():
{ }
{
  <IDENTIFICADOR> (<VIRGULA> <IDENTIFICADOR>)*
}

void ListaExpressoes():
{}
{
  Expressao()
  (
    <VIRGULA> Expressao()
  )*
}

void Expressao():
{ }
{
  fator()
  (
    (<SOMA> | <SUBTRACAO>)
    fator()
  )*
}

void fator(): { }
{
   termo()
  (
    (<MULTIPLICACAO> | <DIVISAO>)
    termo()
  )*
}

void termo(): 
{}
{
  <IDENTIFICADOR> termoIdentificadorSufixo()                    |
  <CONSTANTE_INT>                                               |
  <CONSTANTE_FLOAT>                                             |
  <LITERAL_STRING>                                              |
  <TRUE>                                                        |
  <FALSE>                                                       |
  <TAMANHO> <IDENTIFICADOR>                                     |  
  inicializacaoLista()                                          |
  <TOPO> <IDENTIFICADOR>                                        |
  <PILHA_VAZIA> <IDENTIFICADOR>                                 |
  "(" Expressao() ")"
}

void termoIdentificadorSufixo():
{}
{
  <ABRIRFUNC> (ListaExpressoes())? <FECHARFUNC>               |
  (<ABRIREXP> (ListaExpressoes())? <FECHAREXP>)?
}

void operadorLogico():
{ }
{
  (<OPDIF> | <OPIGUAL> | <OPMAIOR> | <OPMENOR> | <OPMAIORIGUAL> | <OPMENORIGUAL> | <OPAND> | <OPOR>)
}

void expressaoLogica():
{ }
{
  Expressao() operadorLogico() Expressao()
}

void expressaoCondicional():
{}
{
  condicao() (<SENAO> (
    condicao() |
  <ABREBLOCO> bloco() <FECHABLOCO>)
  )?
}

void condicao():
{ }
{
  <CONDICIONAL> <ABRIREXP> expressaoLogica() <FECHAREXP> <ABREBLOCO> bloco() <FECHABLOCO>
}

void print():
{ }
{
   <PRINT> ListaExpressoes() <FIMESTRUTURA>  
}

void scan():
{}
{
   <SCAN> <IDENTIFICADOR> <FIMESTRUTURA>
}

void whileLoop():
{}
{
  <WHILE> <ABRIREXP > expressaoLogica() <FECHAREXP>
   <ABREBLOCO> bloco() <FECHABLOCO>
}

void forLoop():
{}
{
  <FOR> <ABRIREXP>
  atribuicaoFor() <SEPARADOR>
  expressaoLogica() <SEPARADOR>
  atribuicaoFor()
   <FECHAREXP>
   <ABREBLOCO>
bloco()
   <FECHABLOCO>
}

void atribuicaoFor():
{}
{
  (tipoDado())? <IDENTIFICADOR> <ATRIBUICAO> Expressao()
}

void declaraFuncao():
{}
{
 <FUNCAO> (tipoDado())? <IDENTIFICADOR> <ABRIRFUNC> (listaParametros())? <FECHARFUNC>
 <ABREBLOCO> bloco() <FECHABLOCO>
}

void listaParametros():
{}
{
  parametro() (<VIRGULA> parametro())*
}

void parametro():
{}
{
  tipoDado() <IDENTIFICADOR>
}

void retorno():
{}
{
<RETURN> (Expressao())?<FIMESTRUTURA>
}

void tipoLista():
{ }
{
  <LISTA> (<INT> | <FLOAT> | <STRING> | <BOOL>)
}

void inicializacaoLista():
{}
{
  <ABRIREXP> (ListaExpressoes())? <FECHAREXP>
}

void tipoPilha():
{}
{
  <PILHA> (<INT> | <FLOAT> | <STRING> | <BOOL>)
}
