src/compiler/BrCompiler.java
/* BrCompiler.java */
/* Generated By:JavaCC: Do not edit this line. BrCompiler.java */
package compiler;

import java.io.BufferedReader;
import java.io.InputStreamReader;
import java.io.StringReader;

public class BrCompiler implements BrCompilerConstants {

  private static boolean parserInitialized = false;

  private static String obterTokenPortugues(int tipoToken) {
    switch(tipoToken) {
      case INICIOPROG: return "gambiarra";
      case ABREBLOCO: return "abre-te-sesamo";
      case FECHABLOCO: return "fecha-te-sesamo";
      case INT: return "stonks";
      case FLOAT: return "fiado";
      case STRING: return "textao";
      case BOOL: return "eh-migue";
      case TRUE: return "sim";
      case FALSE: return "nao";
      case ATRIBUICAO: return "receba";
      case FIMESTRUTURA: return "br";
      case CONDICIONAL: return "sepa";
      case SENAO: return "da-teus-pulo";
      case ABRIREXP: return "[";
      case FECHAREXP: return "]";
      case ABRIRFUNC: return "(";
      case FECHARFUNC: return ")";
      case PRINT: return "printa";
      case SCAN: return "papa-entrada";
      case FOR: return "pet";
      case WHILE: return "repet";
      case FUNCAO: return "vai-filhao";
      case RETURN: return "devolva";
      case SEPARADOR: return ";";
      case SOMA: return "+";
      case SUBTRACAO: return "-";
      case MULTIPLICACAO: return "*";
      case DIVISAO: return "/";
      case OPMAIOR: return ">";
      case OPIGUAL: return "==";
      case OPMENOR: return "<";
      case OPMAIORIGUAL: return ">=";
      case OPMENORIGUAL: return "<=";
      case OPDIF: return "!=";
      case OPAND: return "&&";
      case OPOR: return "|";
      case IDENTIFICADOR: return "identificador";
      case CONSTANTE_INT: return "numero inteiro";
      case CONSTANTE_FLOAT: return "numero decimal";
      case LITERAL_STRING: return "texto";
      case VIRGULA: return "virgula (,)";
      case LISTA: return "tropa-do-gordao";
      case ADICIONAR: return "recrutar";
      case REMOVER: return "expulsar";
      case TAMANHO: return "tamanho";
      case PILHA: return "sanduiche-iche";
      case EMPILHAR: return "montar-sanduba";
      case DESEMPILHAR: return "comer-sanduba";
      case TOPO: return "olho-gordo";
      case PILHA_VAZIA: return "farelo";
      default: return "token desconhecido";
    }
  }

  public static String handleParseError(ParseException e) {
    StringBuilder resultado = new StringBuilder();
    boolean blocoNaoFechado = false;

    if (e.currentToken != null) {
        if (e.currentToken.kind == EOF) {
            blocoNaoFechado = true;
        } else if (e.currentToken.next != null && e.currentToken.next.kind == EOF) {
            blocoNaoFechado = true;
        } else if (e.expectedTokenSequences != null) {
            for (int[] sequence : e.expectedTokenSequences) {
                for (int tokenType : sequence) {
                    if (tokenType == FECHABLOCO) {
                        blocoNaoFechado = true;
                        break;
                    }
                }
                if (blocoNaoFechado) break;
            }
        }
    }

    if (blocoNaoFechado) {
        resultado.append("ERRO DE SINTAXE: Bloco nao fechado\n");
        resultado.append("Faltou adicionar 'fecha-te-sesamo' para fechar bloco de comando");

        if (e.currentToken != null) {
            resultado.append("\nErro detectado proximo a linha ").append(e.currentToken.beginLine)
                    .append(", coluna ").append(e.currentToken.beginColumn);
        }
        return resultado.toString();
    }

    resultado.append("ERRO DE SINTAXE:\n");

    Token currentToken = e.currentToken;
    Token tokenEncontrado = null;

    if (currentToken != null && currentToken.next != null) {
        tokenEncontrado = currentToken.next;
    } else if (currentToken != null) {
        tokenEncontrado = currentToken;
    } else {
        try {
            tokenEncontrado = getToken(1);
        } catch (Exception ex) {
            tokenEncontrado = null;
        }
    }

    if (tokenEncontrado != null && tokenEncontrado.image != null) {
        resultado.append("Token encontrado: '").append(tokenEncontrado.image).append("' na linha ")
                .append(tokenEncontrado.beginLine).append(", coluna ").append(tokenEncontrado.beginColumn);
    } else {
        if (currentToken != null) {
            String tokenImage = currentToken.image != null ? currentToken.image : "EOF";
            int linha = currentToken.beginLine > 0 ? currentToken.beginLine : 1;
            int coluna = currentToken.beginColumn > 0 ? currentToken.beginColumn : 1;
            resultado.append("Token encontrado: '").append(tokenImage).append("' na linha ")
                    .append(linha).append(", coluna ").append(coluna);
        } else {
            resultado.append("Token encontrado: fim de arquivo inesperado");
        }
    }

    if (e.expectedTokenSequences.length > 0) {
        resultado.append("\nEra esperado: ");
        boolean first = true;
        for (int[] sequence : e.expectedTokenSequences) {
            if (!first) resultado.append(" ou ");
            for (int i = 0; i < sequence.length; i++) {
                if (i > 0) resultado.append(" ");
                resultado.append("'").append(obterTokenPortugues(sequence[i])).append("'");
            }
            first = false;
        }
    }

    return resultado.toString();
  }

  public static String handleTokenMgrError(TokenMgrError e) {
    String msg = e.getMessage();
    StringBuilder resultado = new StringBuilder();

    int linha = 1;
    int coluna = 1;
    String charEncontrado = "?";

    try {
        String[] partes = msg.split(" ");
        for (int i = 0; i < partes.length; i++) {
            if (partes[i].equals("line") && i + 1 < partes.length) {
                linha = Integer.parseInt(partes[i + 1].replace(",", ""));
            }
            if (partes[i].equals("column") && i + 1 < partes.length) {
                coluna = Integer.parseInt(partes[i + 1].replace(".", ""));
            }
        }

        if (msg.contains("after prefix")) {
            int start = msg.indexOf("after prefix \"") + 14;
            int end = msg.indexOf("\"", start);
            if (start > 13 && end > start) {
                String prefixo = msg.substring(start, end);
                charEncontrado = prefixo;
                coluna = Math.max(1, coluna - prefixo.length());
            }
        } else if (msg.contains("Encountered:") && msg.contains("(")) {
            int parenteseAbre = msg.lastIndexOf("(");
            int parenteseFecha = msg.indexOf(")", parenteseAbre);

            if (parenteseAbre != -1 && parenteseFecha != -1) {
                String codigoStr = msg.substring(parenteseAbre + 1, parenteseFecha).trim();

                if (codigoStr.matches("\\d+")) {
                    try {
                        int codigoAscii = Integer.parseInt(codigoStr);
                        charEncontrado = Character.toString((char) codigoAscii);
                    } catch (NumberFormatException ex) {
                        charEncontrado = codigoStr;
                    }
                } else {
                    charEncontrado = codigoStr;
                }
            }
        } else {
            int aspasAbre = msg.indexOf("'");
            int aspasFecha = msg.indexOf("'", aspasAbre + 1);
            if (aspasAbre != -1 && aspasFecha != -1) {
                charEncontrado = msg.substring(aspasAbre + 1, aspasFecha);
            }
        }
    } catch (Exception ex) {
        // manter valores padrao
    }

    if (charEncontrado.startsWith("'") && charEncontrado.endsWith("'") && charEncontrado.length() > 1) {
        charEncontrado = charEncontrado.substring(1, charEncontrado.length() - 1);
    }

    resultado.append("ERRO LEXICO\n");
    resultado.append("Caractere invalido '").append(charEncontrado).append("' encontrado na linha ")
            .append(linha).append(", coluna ").append(coluna);

    String sugestao = gerarSugestaoErroLexico(charEncontrado);
    resultado.append("\n").append(sugestao);

    return resultado.toString();
  }

  private static String gerarSugestaoErroLexico(String charEncontrado) {
    if (charEncontrado.equals("=")) {
        return "Sugestao: Use 'receba' para atribuicao em vez de '='";
    } else if (charEncontrado.equals("@")) {
        return "Sugestao: Caractere '@' nao e permitido";
    } else if (charEncontrado.equals("?")) {
        return "Sugestao: Ponto de interrogacao nao e um operador valido";
    } else if (charEncontrado.equals(":")) {
        return "Sugestao: Dois pontos nao sao usados na linguagem";
    } else if (charEncontrado.equals("'")) {
        return "Sugestao: Utilize aspas duplas para strings";
    } else if (charEncontrado.equals("!")) {
        return "Sugestao: Use '!=' para diferenca";
    } else {
        return "Sugestao: Use apenas letras, numeros e os operadores definidos";
    }
  }

  public static void main(String args[]) throws ParseException {
    if (!parserInitialized) {
        new BrCompiler(System.in);
        parserInitialized = true;
    }

    BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));

    while (true) {
        System.out.println("na minha maquina funciona!");
        System.out.print("comece a digitar sua gambiarra:");

        try {
            String line = reader.readLine();

            if (line == null) {
                System.out.println("\nSaindo...");
                break;
            }

            line = line.trim();

            if (line.isEmpty()) {
                continue;
            }

            BrCompiler.ReInit(new StringReader(line));
            BrCompiler.main();
            System.out.println("OK.");

        } catch (ParseException e) {
            System.out.println("NOK.");
            System.out.println(handleParseError(e));
        } catch (TokenMgrError e) {
            System.out.println("NOK.");
            System.out.println(handleTokenMgrError(e));
        } catch (Exception e) {
            System.out.println("NOK.");
            System.out.println("ERRO INESPERADO: " + e.getMessage());

            if (e.toString().contains("Stream closed") || e.toString().contains("null")) {
                System.out.println("Saindo...");
                break;
            }
        }
    }
  }

  static final public void main() throws ParseException {
    jj_consume_token(INICIOPROG);
    jj_consume_token(ABREBLOCO);
    bloco();
    jj_consume_token(FECHABLOCO);
}

  static final public void bloco() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PRINT:
      case SCAN:
      case FOR:
      case WHILE:
      case FUNCAO:
      case RETURN:
      case LISTA:
      case PILHA:
      case INT:
      case FLOAT:
      case STRING:
      case BOOL:
      case CONDICIONAL:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PRINT:
      case SCAN:
      case FOR:
      case WHILE:
      case RETURN:
      case LISTA:
      case PILHA:
      case INT:
      case FLOAT:
      case STRING:
      case BOOL:
      case CONDICIONAL:
      case IDENTIFICADOR:{
        comando();
        break;
        }
      case FUNCAO:{
        declaraFuncao();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LISTA:
    case PILHA:
    case INT:
    case FLOAT:
    case STRING:
    case BOOL:{
      declaraVariavel();
      break;
      }
    case CONDICIONAL:{
      expressaoCondicional();
      break;
      }
    case IDENTIFICADOR:{
      comandoIdentificador();
      break;
      }
    case PRINT:{
      print();
      break;
      }
    case SCAN:{
      scan();
      break;
      }
    case WHILE:{
      whileLoop();
      break;
      }
    case FOR:{
      forLoop();
      break;
      }
    case RETURN:{
      retorno();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void comandoIdentificador() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    comandoIdentificadorSufixo();
}

  static final public void comandoIdentificadorSufixo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      jj_consume_token(ATRIBUICAO);
      Expressao();
      jj_consume_token(FIMESTRUTURA);
      break;
      }
    case ABRIRFUNC:{
      jj_consume_token(ABRIRFUNC);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TAMANHO:
      case TOPO:
      case PILHA_VAZIA:
      case TRUE:
      case FALSE:
      case ABRIREXP:
      case ABRIRFUNC:
      case LITERAL_STRING:
      case CONSTANTE_INT:
      case CONSTANTE_FLOAT:
      case IDENTIFICADOR:{
        ListaExpressoes();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(FECHARFUNC);
      jj_consume_token(FIMESTRUTURA);
      break;
      }
    case ADICIONAR:{
      jj_consume_token(ADICIONAR);
      Expressao();
      jj_consume_token(FIMESTRUTURA);
      break;
      }
    case REMOVER:{
      jj_consume_token(REMOVER);
      jj_consume_token(ABRIREXP);
      Expressao();
      jj_consume_token(FECHAREXP);
      jj_consume_token(FIMESTRUTURA);
      break;
      }
    case EMPILHAR:{
      jj_consume_token(EMPILHAR);
      Expressao();
      jj_consume_token(FIMESTRUTURA);
      break;
      }
    case DESEMPILHAR:{
      jj_consume_token(DESEMPILHAR);
      jj_consume_token(FIMESTRUTURA);
      break;
      }
    case FIMESTRUTURA:
    case ABRIREXP:
    case SOMA:
    case SUBTRACAO:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ABRIREXP:{
        jj_consume_token(ABRIREXP);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TAMANHO:
        case TOPO:
        case PILHA_VAZIA:
        case TRUE:
        case FALSE:
        case ABRIREXP:
        case ABRIRFUNC:
        case LITERAL_STRING:
        case CONSTANTE_INT:
        case CONSTANTE_FLOAT:
        case IDENTIFICADOR:{
          ListaExpressoes();
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        jj_consume_token(FECHAREXP);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      sufixoExpressao();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void sufixoExpressao() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:
      case SUBTRACAO:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SOMA:{
        jj_consume_token(SOMA);
        break;
        }
      case SUBTRACAO:{
        jj_consume_token(SUBTRACAO);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      fator();
    }
    jj_consume_token(FIMESTRUTURA);
}

  static final public void declaraVariavel() throws ParseException {
    tipoDado();
    ListaIdentificadores();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      jj_consume_token(ATRIBUICAO);
      ListaExpressoes();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(FIMESTRUTURA);
}

  static final public void tipoDado() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case FLOAT:{
      jj_consume_token(FLOAT);
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case BOOL:{
      jj_consume_token(BOOL);
      break;
      }
    case LISTA:{
      tipoLista();
      break;
      }
    case PILHA:{
      tipoPilha();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void ListaIdentificadores() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      jj_consume_token(IDENTIFICADOR);
    }
}
